@@ -552,9 +552,14 @@ manager::manager(size_t p_min_threads,size_t p_max_threads) : active_(!managed)
 		min_threads = p_min_threads;
 		max_threads = p_max_threads;
 
+		if (p_min_threads == 0)
+		{
+			p_min_threads = 1;
+		}
+
 		for(int shard = 0; shard != NUM_SHARDS; ++shard) {
 			const threading::lock lock(*shard_mutexes[shard]);
-			for(size_t n = 0; n != min_threads; ++n) {
+			for(size_t n = 0; n != p_min_threads; ++n) {
 				threading::thread * tmp = new threading::thread(process_queue,(void*)intptr_t(shard));
 				threads[shard][tmp->get_id()] = tmp;
 			}
